# swagger/swagger.json
@@ -487,6 +487,18 @@
           "description" : "Last four digits of the card used to make payment",
           "required" : false,
           "type" : "string"
+        }, {
+          "name" : "from_settled_date",
+          "in" : "query",
+          "description" : "From settled date of payment to be searched (this date is inclusive). Example=2015-08-13",
+          "required" : false,
+          "type" : "string"
+        }, {
+          "name" : "to_settled_date",
+          "in" : "query",
+          "description" : "To settled date of payment to be searched (this date is inclusive). Example=2015-08-14",
+          "required" : false,
+          "type" : "string"
         } ],
         "responses" : {
           "200" : {
@@ -968,6 +980,18 @@
           "name" : "to_date",
           "in" : "query",
           "description" : "To date of refunds to be searched (this date is exclusive). Example=2015-08-14T12:35:00Z",
+          "required" : false,
+          "type" : "string"
+        }, {
+          "name" : "from_settled_date",
+          "in" : "query",
+          "description" : "From settled date of refund to be searched (this date is inclusive). Example=2015-08-13",
+          "required" : false,
+          "type" : "string"
+        }, {
+          "name" : "to_settled_date",
+          "in" : "query",
+          "description" : "To settled date of refund to be searched (this date is inclusive). Example=2015-08-13",
           "required" : false,
           "type" : "string"
         }, {
@@ -2211,6 +2235,10 @@
           "example" : "success",
           "readOnly" : true,
           "enum" : [ "submitted", "success", "error" ]
+        },
+        "settlement_summary" : {
+          "readOnly" : true,
+          "$ref" : "#/definitions/SettlementSummary"
         }
       }
     },
@@ -2242,6 +2270,10 @@
           "example" : "success",
           "readOnly" : true,
           "enum" : [ "submitted", "success", "error" ]
+        },
+        "settlement_summary" : {
+          "readOnly" : true,
+          "$ref" : "#/definitions/SettlementSummary"
         }
       }
     },
@@ -2412,13 +2444,19 @@
         "capture_submit_time" : {
           "type" : "string",
           "example" : "2016-01-21T17:15:000Z",
-          "description" : "Date and time capture request has been submitted (may be null if capture request was not immediately acknowledged by payment gateway)",
+          "description" : "Date and time capture request has been submitted. May be null if capture request was not immediately acknowledged by payment gateway. Not applicable for refunds.",
           "readOnly" : true
         },
         "captured_date" : {
           "type" : "string",
           "example" : "2016-01-21",
-          "description" : "Date of the capture event",
+          "description" : "Date of the capture event. Not applicable for refunds.",
+          "readOnly" : true
+        },
+        "settled_date" : {
+          "type" : "string",
+          "example" : "2016-01-21",
+          "description" : "The date that the transaction was settled, for example paid into or refunded from the service's account.",
           "readOnly" : true
         }
       },
